fix image and overflow issue

--- a/styles.css
+++ b/styles.css
@@ -131,43 +131,23 @@ time, mark, audio, video {
 }
 
 body {
-    overflow: hidden;
     display: flex;
-}
-
-img {
-    object-fit: cover;
-    width: 30vw;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .left-side {
-    position: relative;
-    display: inline-block;
-    z-index: 10;
-    text-align: center;
-    width: 30vw;
-    height: 100vh;
     flex: 1;
-}
+    background-image: url(./images/alexander-andrews-H0dcpcO_hYc-unsplash.jpg);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
-.side-image {
-    display: block;
-    max-width: 100%;
-    margin: auto;
-    padding: auto;
 }
 
 .img-logo {
-    position: absolute;
-    height: 10%;
     text-align: center;
-    width: 100%;
-    margin: auto;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
   }
 
 .logo {
@@ -180,16 +160,16 @@ img {
     font-size: 1.6rem;
     margin: 1rem 3rem;
     gap: 1rem;
+    margin-top: 45vh;
+    padding: 10px;
     
 }
 
 .img-footer {
-    position: absolute;
-    top: 97%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    text-align: center;
     color: white;
     opacity: .2;
+    padding: 10px;
 }
 
 a {
@@ -198,11 +178,10 @@ a {
 }
 
 .main {
-    width: 70vw;
-    height: 100vh;
     display: flex;
     flex-direction: column;
     flex: 2;
+    min-width: 45rem;
 }
 .title, .form, .submit {
     flex: 1;
@@ -235,7 +214,6 @@ a {
 }
 
 .title-text {
-    /* width: 50vw; */
     margin-top: 5rem;
     margin-bottom: 2rem;
 }
@@ -282,7 +260,6 @@ label {
 .form {
     font-size: 1.3rem;
     line-height: 1.2;
-    width: 70vw;
     display: flex;
     padding: 2rem 4vw;
     
